# CompositeQuantizationClone

./: .gitignore  CMakeLists.txt  CompositeQuantizationTraining.sln  HOW_TO_INSTALL.txt  HOW_TO_SEARCH.txt  HOW_TO_TRAINING.txt  README.txt  build_project.bat
CompositeQuantizationTraining/: CQParameters.cpp  CQParameters.h  Cluster.cpp  Cluster.h  ClusterCommon.cpp  ClusterCommon.h  CompositeQuantization.cpp  CompositeQuantization.h  CompositeQuantizationTraining.vcxproj  CompositeQuantizationTraining.vcxproj.filters  DataUtil.h  Demo.cpp  Distance.h  Kmeans.cpp  Kmeans.h  PartitioningTree.cpp  ReadMe.txt  Searcher.cpp  Searcher.h  closureconfig.txt  config.txt  lloydconfig.txt  stdafx.cpp
CompositeQuantizationTraining/x64/Debug/: vc120.idb
CompositeQuantizationTraining/x64/Debug/Composit.A93C2D9F.tlog/: CL.read.1.tlog  CL.write.1.tlog  CompositeQuantizationTraining.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CompositeQuantizationTraining/x64/Release/Composit.A93C2D9F.tlog/: CL.read.1.tlog  CL.write.1.tlog  CompositeQuantizationTraining.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DEMO/: USAGE.txt  config.txt
DEMO/OUTPUT_demo/: B  D  PQ.B  PQ.D  PQ.partition  distor_iter.txt  results
Release version/: CQParameters.h  ClosureCluster.cpp  ClosureCluster.h  Cluster.cpp  Cluster.h  CompositeQuantization.cpp  CompositeQuantization.h  Dataset.h  Demo.cpp  Kmeans.cpp  NoConstraintCompositeQuantization.cpp  NoConstraintCompositeQuantization.h  PartitioningTree.h  ProductQuantization.cpp  ProductQuantization.h  Searcher.h
ipch/additivequantizationtraining-b57aa3e7/: additivequantizationtraining-dc7989f3.ipch  additivequantizationtraining-fe53adb9.ipch
ipch/compositequantizationlib-1e73d36f/: compositequantizationlib-9fdf48b7.ipch
ipch/compositequantizationtraining-31c6f859/: compositequantizationtraining-18c8ccfc.ipch  compositequantizationtraining-4d5c64fa.ipch  compositequantizationtraining-5818ea00.ipch  compositequantizationtraining-75e76982.ipch
ipch/searchertester-9e09f35/: searchertester-f6f529ea.ipch
